@@ -94,6 +94,8 @@ http://stupidpythonideas.blogspot.com/2014/09/sockets-and-multiprocessing.html
 https://curl.haxx.se/mail/lib-2014-09/0070.html
 https://github.com/fl4re/curl/blob/master/lib/curl_sasl_sspi.c
 https://github.com/mongodb-labs/winkerberos/issues/19
+https://www.tillett.info/2013/05/13/how-to-create-a-windows-program-that-works-as-both-as-a-gui-and-console-application/
+http://www.boku.ru/2016/02/28/posting-to-console-from-gui-app/
 
 Thank you to the following contributors as well for their PRs:-
 
